--- a/.github/workflows/update-formula.yaml
+++ b/.github/workflows/update-formula.yaml
@@ -30,10 +30,16 @@ jobs:
           sed -i "s|sha256 .* |sha256 ${{ inputs.SHA_256 }}|" Formula/templ.rb
           sed -i "s|version .* |version ${{ inputs.VERSION }}|" Formula/templ.rb
 
+      - name: "a debug step, in github? How shocking"
+        run: |
+          git status
+          ls -R
       - name: "commit formula"
         run: |
           git config --global user.email "github-bot@playtechnique.io"
-           git config --global user.name "Github Bot"
-           git add Formula/templ.rb
-           git commit -m "Auto-Updater from templ: updating for ${{ inputs.VERSION }}"
-           git push
+          git config --global user.name "Github Bot"
+          git add Formula/templ.rb
+          git commit -m "Auto-Updater from templ: updating for ${{ inputs.VERSION }}"
+          git tag ${{ inputs.VERSION }}
+          git push
+          git push --tags
